deploy/k8s/namespace-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dagger-kubernetes
