deploy/k8s/cache-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache-registry
  namespace: dagger-kubernetes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache-registry
  template:
    metadata:
      labels:
        app: cache-registry
    spec:
      containers:
        - name: registry
          image: registry:2
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: data
              mountPath: /var/lib/registry
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: cache-registry-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: cache-registry
  namespace: dagger-kubernetes
spec:
  selector:
    app: cache-registry
  ports:
    - port: 5000
      targetPort: 5000
